--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "express": "^4.17.1",
-    "http-errors": "^1.8.0"
+    "http-errors": "^1.8.0",
+    "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
     "jest": "^27.2.4"
